# industry-value-estimator

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile.api  PROMPT_TEMPLATES.md  README.md  docker-compose.yml  lseg-data.config.json.example  push.sh  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
api/: data_loader.py  main.py  schemas.py
api/routers/: bubble.py  companies.py  consensus.py  credit_spreads.py  data_quality.py  diagnostics.py  dispersion.py  export.py  forecasts.py  fundamentals.py  insights.py  scenarios.py  segments.py  sensitivity.py  total.py  validation.py
config/: settings.py
config/industries/: ai.yaml
data/empirics/: controller_adapter.json  fundamentals_study_lseg.json
data/processed/: analyst_dispersion.parquet  backtesting_results.parquet  bottom_up_validation.parquet  bubble_index.parquet  earnings_ai_attribution.parquet  forecasts_ensemble.parquet  forecasts_scenarios.parquet  lseg_ai.parquet  market_anchors_ai.parquet  oecd_msti_ai.parquet  oecd_pats_ai.parquet  private_valuations_ai.parquet  residuals_statistical.parquet  revenue_attribution_ai.parquet  world_bank_ai.parquet
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  METHODOLOGY.md  methodology_paper.md
frontend/: package-lock.json  package.json
reports/templates/: base.html  executive_brief.html  full_report.html
scripts/: generate_methodology_paper.py  run_dashboard.py  run_ensemble_pipeline.py  run_reports.py  run_statistical_pipeline.py
src/backtesting/: __init__.py  actuals_assembly.py  benchmarks.py  walk_forward.py
tests/: conftest.py  test_backtesting.py  test_backtesting_completeness.py  test_bottom_up.py  test_cagr_calibration.py  test_calibration.py  test_ci_contracts.py  test_config.py  test_contract_usd_billions.py  test_dashboard.py  test_deflate.py  test_diagnostics.py  test_docs.py  test_earnings_analysis.py  test_earnings_attribution.py  test_edgar.py  test_ensemble.py  test_ensemble_weights.py  test_features.py  test_forecast_output.py  test_ingestion.py  test_ingestion_lseg.py  test_insights.py  test_integration_snapshot.py  test_interpolate.py  test_llm_validator.py  test_market_anchors.py  test_ml_models.py  test_models.py  test_pipeline.py  test_pipeline_wiring.py  test_private_market_integration.py  test_private_valuations.py  test_processing.py  test_reports.py  test_revenue_attribution.py  test_serialization.py  test_shap.py  test_validate.py
(+253 files in other folders)
