[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.0.0",
    "dash-bootstrap-components>=2.0.4",
    "kaleido>=1.2.0",
    "lightgbm>=4.6.0",
    "lseg-data>=2.1.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pandasdmx>=1.10.0",
    "pandera>=0.30.0",
    "pmdarima>=2.1.1",
    "prophet>=1.3.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests-cache>=1.3.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shap>=0.46.0",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "wbgapi>=1.0.14",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

